arreglo de margin ul,li auntala centrar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div>
-            <a href="#">  <img src="imgenes/2 imagen de logo mas nombre.png" alt=""></a>
+            <a href="#">  <img src="imagenes/2 imagen de logo mas nombre.png" alt=""></a>
             </div>
             <div>
                 <ul class="enlaces">
@@ -39,12 +39,12 @@
     </header>
     <section class="center">
             <span class="img1">STORE</span>
-            <img src="imgenes/gif pagina.gif" alt="" class="img2"></span>
+            <img src="imagenes/gif pagina.gif" alt="" class="img2"></span>
         </div>
     </section>
     <main> 
         <span class="store"><b>¡Tus productos,a tu alcance! En nuestro minimarket, la calidad se encuentra en cada rincón.</b></span>
-        <img src="imgenes/imagen de mini a color.png" alt="" width="512" height="512">
+        <img src="imagenes/imagen de mini a color.png" alt="" width="512" height="512">
     </main>
     <hr>
     <footer>
