--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet" />
     <title>MiniMarket pear</title>
 </head>
-      <!-- cuerpo -->
+      <!-- cuerpo1 -->
 <body>
     <header>
         <nav>
