cambio de color de pagina

--- a/index.html
+++ b/index.html
@@ -15,25 +15,40 @@
         <nav>
             <div>
 
-            <a href="#">  <img src= "https://www.pngitem.com/pimgs/m/362-3621616_store-small-business-online-small-store-icon-png.png"
-             alt="minimarket" width="300" height="300"></a>
+            <a href="#">  <img src= "https://i.pinimg.com/564x/17/15/86/171586d4bb01673b440ebf61dc85c07b.jpg"
+             alt="minimarket" width="300" height="300"  class="img__minimarket"></a>
             </div>
             <div>
                 <ul class="enlaces">
                     <li>
-                        <a href="pag2.html" target="_blank" rel="noopener noreferrer" class="upper"><b>PRODUCTOS🛒</b></a>
+                        <a href="pag2.html" target="_blank" rel="noopener noreferrer" class="upper"><b>PRODUCTOS
+                            <img src="https://i.pinimg.com/564x/18/2b/cd/182bcda75f166e40fa296f61b7b2be88.jpg" 
+                            alt="" width="50" height="50"  class="img__name">
+                        </b></a>
                     </li>
                     <li>
-                        <a href="http://" target="_blank" rel="noopener noreferrer" class="upper"><b>OFERTAS🤑</b></a>
+                        <a href="http://" target="_blank" rel="noopener noreferrer" class="upper"><b>OFERTAS
+                            <img src="https://i.pinimg.com/564x/04/c6/19/04c61943b0c8646068193f273648cc22.jpg" alt="" width="100" height="100">
+                        </b></a>
                     </li>
                     <li>
-                        <a href="http://" target="_blank" rel="noopener noreferrer" class="upper"><b>RAPI COMPRA🛵</b></a>
+                        <a href="http://" target="_blank" rel="noopener noreferrer" class="upper"><b>RAPI COMPRA
+                            <img src="https://i.pinimg.com/564x/38/70/b6/3870b6e6cdf662dace654ca36ec6c48b.jpg" alt=""
+                            width="100" height="100">
+                        </b></a>
                     </li>
                     <li>
-                        <a href="http://" target="_blank" rel="noopener noreferrer" class="upper"><b>NOSOTROS👨‍💼</b></a>
+                        <a href="http://" target="_blank" rel="noopener noreferrer" class="upper"><b>NOSOTROS
+                            <img src="https://i.pinimg.com/564x/a3/75/b8/a375b8512b9031de5354a2259a7fe96e.jpg" alt=""
+                            width="100" height="100">
+                        </b></a>
                     </li>
                     <li>
-                        <a href="http://" target="_blank" rel="noopener noreferrer" class="usuario">👩USUARIO DE TIENDA🧑</a>
+                        <a href="http://" target="_blank" rel="noopener noreferrer" class="usuario">MI CUENTA
+                            <img src="https://i.pinimg.com/564x/21/3f/f1/213ff172de864080144cd1f6901f9625.jpg" alt=""
+                            width="100" height="100">
+
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -41,12 +56,12 @@
     </header>
     <section class="center">
             <span class="img1">STORE</span>
-            <img src="imagenes/gif pagina.gif" alt="" class="img2"></span>
+            <img src="https://i.pinimg.com/564x/18/2b/cd/182bcda75f166e40fa296f61b7b2be88.jpg" alt="" width="100" height="100" class="img2"></span>
         </div>
     </section>
     <main> 
         <span class="store"><b>¡Tus productos,a tu alcance! En nuestro minimarket, la calidad se encuentra en cada rincón.</b></span>
-        <img src="" alt="" width="400" height="400"> 
+        <img src="https://i.pinimg.com/564x/a3/2b/19/a32b19c33d4a36e69069493a0353e531.jpg" alt="" width="200" height="200"> 
 
     </main>
     <hr>
