--- a/index.html
+++ b/index.html
@@ -18,87 +18,84 @@
         <nav>
             <div>
 
-<<<<<<< HEAD
-                <a href="#"> <img src="https://www.pngitem.com/pimgs/m/362-3621616_store-small-business-online-small-store-icon-png.png"
+                <<<<<<< HEAD <a href="#"> <img
+                        src="https://www.pngitem.com/pimgs/m/362-3621616_store-small-business-online-small-store-icon-png.png"
                         alt="minimarket" width="300" height="300"></a>
-=======
-            <a href="#">  <img src= "https://i.pinimg.com/564x/17/15/86/171586d4bb01673b440ebf61dc85c07b.jpg"
-             alt="minimarket" width="300" height="300"  class="img__minimarket"></a>
->>>>>>> 9dbb4b4cac531459e242d198e15002278c94378d
+                    =======
+                    <a href="#"> <img src="https://i.pinimg.com/564x/17/15/86/171586d4bb01673b440ebf61dc85c07b.jpg" alt="minimarket"
+                            width="300" height="300" class="img__minimarket"></a>
+                    >>>>>>> 9dbb4b4cac531459e242d198e15002278c94378d
             </div>
             <div>
                 <ul class="enlaces">
                     <li>
                         <a href="pag2.html" target="_blank" rel="noopener noreferrer" class="upper"><b>PRODUCTOS
-                            <img src="https://i.pinimg.com/564x/18/2b/cd/182bcda75f166e40fa296f61b7b2be88.jpg" 
-                            alt="" width="50" height="50"  class="img__name">
-                        </b></a>
+                                <img src="https://i.pinimg.com/564x/18/2b/cd/182bcda75f166e40fa296f61b7b2be88.jpg"
+                                    alt="" width="50" height="50" class="img__name">
+                            </b></a>
                     </li>
                     <li>
                         <a href="http://" target="_blank" rel="noopener noreferrer" class="upper"><b>OFERTAS
-                            <img src="https://i.pinimg.com/564x/04/c6/19/04c61943b0c8646068193f273648cc22.jpg" alt="" width="100" height="100">
-                        </b></a>
+                                <img src="https://i.pinimg.com/564x/04/c6/19/04c61943b0c8646068193f273648cc22.jpg" alt="" width="100" height="100">
+                                </b></a>
                     </li>
                     <li>
-<<<<<<< HEAD
-                        <a href="http://" target="_blank" rel="noopener noreferrer" class="upper"><b>RAPI
+                        <<<<<<< HEAD <a href="http://" target="_blank" rel="noopener noreferrer" class="upper"><b>RAPI
                                 COMPRA🛵</b></a>
-=======
-                        <a href="http://" target="_blank" rel="noopener noreferrer" class="upper"><b>RAPI COMPRA
-                            <img src="https://i.pinimg.com/564x/38/70/b6/3870b6e6cdf662dace654ca36ec6c48b.jpg" alt=""
-                            width="100" height="100">
-                        </b></a>
->>>>>>> 9dbb4b4cac531459e242d198e15002278c94378d
+                            =======
+                            <a href="http://" target="_blank" rel="noopener noreferrer" class="upper"><b>RAPI COMPRA
+                                    <img src="https://i.pinimg.com/564x/38/70/b6/3870b6e6cdf662dace654ca36ec6c48b.jpg" alt="" width="100" height="100">
+                                    </b></a>
+                                    >>>>>>> 9dbb4b4cac531459e242d198e15002278c94378d
                     </li>
                     <li>
                         <a href="http://" target="_blank" rel="noopener noreferrer" class="upper"><b>NOSOTROS
-                            <img src="https://i.pinimg.com/564x/a3/75/b8/a375b8512b9031de5354a2259a7fe96e.jpg" alt=""
-                            width="100" height="100">
-                        </b></a>
+                                <img src="https://i.pinimg.com/564x/a3/75/b8/a375b8512b9031de5354a2259a7fe96e.jpg" alt="" width="100" height="100">
+                                </b></a>
                     </li>
                     <li>
-<<<<<<< HEAD
-                        <a href="http://" target="_blank" rel="noopener noreferrer" class="usuario">👩USUARIO DE
+                        <<<<<<< HEAD <a href="http://" target="_blank" rel="noopener noreferrer" class="usuario">
+                            👩USUARIO DE
                             TIENDA🧑</a>
-=======
-                        <a href="http://" target="_blank" rel="noopener noreferrer" class="usuario">MI CUENTA
-                            <img src="https://i.pinimg.com/564x/21/3f/f1/213ff172de864080144cd1f6901f9625.jpg" alt=""
-                            width="100" height="100">
+                            =======
+                            <a href="http://" target="_blank" rel="noopener noreferrer" class="usuario">MI CUENTA
+                                <img src="https://i.pinimg.com/564x/21/3f/f1/213ff172de864080144cd1f6901f9625.jpg" alt="" width="100" height="100">
 
-                        </a>
->>>>>>> 9dbb4b4cac531459e242d198e15002278c94378d
+                            </a>
+                            >>>>>>> 9dbb4b4cac531459e242d198e15002278c94378d
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
     <section class="center">
-<<<<<<< HEAD
-        <span class="img1">STORE</span>
-        <img src="imagenes/gif pagina.gif" alt="" class="img2"></span>
-        </div>
+        <<<<<<< HEAD <span class="img1">STORE</span>
+            <img src="imagenes/gif pagina.gif" alt="" class="img2"></span>
+            </div>
     </section>
     <main>
         <span class="store"><b>¡Tus productos,a tu alcance! En nuestro minimarket, la calidad se encuentra en cada
                 rincón.</b></span>
         <img src="" alt="" width="400" height="400">
-=======
-            <span class="img1">STORE</span>
-            <img src="https://i.pinimg.com/564x/18/2b/cd/182bcda75f166e40fa296f61b7b2be88.jpg" alt="" width="100" height="100" class="img2"></span>
+        =======
+        <span class="img1">STORE</span>
+        <img src="https://i.pinimg.com/564x/18/2b/cd/182bcda75f166e40fa296f61b7b2be88.jpg" alt="" width="100" height="100"
+            class="img2"></span>
         </div>
-    </section>
-    <main> 
-        <span class="store"><b>¡Tus productos,a tu alcance! En nuestro minimarket, la calidad se encuentra en cada rincón.</b></span>
-        <img src="https://i.pinimg.com/564x/a3/2b/19/a32b19c33d4a36e69069493a0353e531.jpg" alt="" width="200" height="200"> 
->>>>>>> 9dbb4b4cac531459e242d198e15002278c94378d
+        </section>
+        <main>
+            <span class="store"><b>¡Tus productos,a tu alcance! En nuestro minimarket, la calidad se encuentra en cada
+                    rincón.</b></span>
+            <img src="https://i.pinimg.com/564x/a3/2b/19/a32b19c33d4a36e69069493a0353e531.jpg" alt="" width="200" height="200">
+            >>>>>>> 9dbb4b4cac531459e242d198e15002278c94378d
 
-    </main>
-    <hr>
-    <footer>
-        <span><a href="http://" target="_blank" rel="noopener noreferrer" class="delivery">DELIVERY</a></span>
-        <span><a href="http://" target="_blank" rel="noopener noreferrer" class="contacto">CONTACTO</a></span>
-        <p class="slogan2"><b>COMPRAS SIMPLES SONRISAS BONITAS👨‍👩‍👧‍👧</b></p>
-    </footer>
+        </main>
+        <hr>
+        <footer>
+            <span><a href="http://" target="_blank" rel="noopener noreferrer" class="delivery">DELIVERY</a></span>
+            <span><a href="http://" target="_blank" rel="noopener noreferrer" class="contacto">CONTACTO</a></span>
+            <p class="slogan2"><b>COMPRAS SIMPLES SONRISAS BONITAS👨‍👩‍👧‍👧</b></p>
+        </footer>
 </body>
 
 </html>
