--- a/AA2.html
+++ b/AA2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MiniMarket Pear</title>
     <link rel="shortcut icon" href="imagenes/faviconperalogo.jpg" image/x-icon" />
-    <link rel="stylesheet" href="AA2.css" />
+    <link rel="stylesheet" href="css/AA2.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
 </head>
 
@@ -19,16 +19,16 @@
                 </a>
                 <ul class="list d-flex g-4xs">
                     <li>
-                        <a href="pag2.html" class="link"><b>Productos🛒</b></a>
+                        <a href="pag2.html" target="_blank" rel="noopener noreferrer" class="link"><b>Productos🛒</b></a>
                     </li>
                     <li>
                         <a href="pag3.html" target="_blank" rel="noopener noreferrer" class="link"><b>Ofertas🤑</b></a>
                     </li>
                     <li>
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="link"><b>Rapi Compra🛵</b></a>
+                        <a href="pag4.html" target="_blank" rel="noopener noreferrer" class="link"><b>Rapi Compra🛵</b></a>
                     </li>
                     <li>
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="link"><b>Nosotros👨‍💼</b></a>
+                        <a href="pag5.html" target="_blank" rel="noopener noreferrer" class="link"><b>Nosotros👨‍💼</b></a>
                     </li>
                     <li>
                         <a href="#" target="_blank" rel="noopener noreferrer" class="link usuario">👩Usuario
@@ -39,30 +39,6 @@
                     <li>
                         <input type=" search" placeholder="buscador"><a href="#" class="button">buscar</a>
                         </li>
-                        <!-- <ul class="list d-none md:d-block md:d-flex g-4xs">
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                    <li>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer"
-                            class="link">
-                            <i class="bi bi-youtube"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank" rel="noopener noreferrer"
-                            class="link">
-                            <i class="bi bi-whatsapp"></i></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer" class="link">
-                            <i class="bi bi-tiktok"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="link">
-                            <i class="bi bi-instagram"></i>
-                        </a>
-                    </li>
-                </ul> -->
             </div>
         </nav>
     </header>
@@ -84,12 +60,11 @@
                         <a href="#" class="button">Contacto</a>
                     </div>
                 </div>
-                <div>
                     <!-- <img src="#" width="400" height="510" class="img2"> -->
                 </div>
             </div>
         </article>
-        <h3 id="1" class="carrito"><b>Productos Destacados:🛒</b></h3>
+        <h3 id="1" class="carrito"><b>Sobresalientes:🛒</b></h3>
         <div>
             <h3 class="titulo-seccion top-dia"><b>Tops del día:</b></h3>
         </div>
