--- a/pag2.html
+++ b/pag2.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="imgenes/faviconperalogo.jpg" type="image/x-icon" />
-    <link rel="stylesheet" href="pag2.css">
+    <link rel="shortcut icon" href="imagenes/faviconperalogo.jpg" type="image/x-icon" />
+    <link rel="stylesheet" href="css/pag2.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
     <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet" />
     <title>MiniMarket pear</title>
@@ -19,16 +19,16 @@
                     </a>
                     <ul class="list d-flex g-4xs">
                         <li>
-                            <a href="#1" class="link"><b>Productos🛒</b></a>
+                            <a href="pag2.html" target="_blank" rel="noopener noreferrer" class="link"><b>Productos🛒</b></a>
                         </li>
                         <li>
-                            <a href="#" target="_blank" rel="noopener noreferrer" class="link"><b>Ofertas🤑</b></a>
+                            <a href="pag3.html" target="_blank" rel="noopener noreferrer" class="link"><b>Ofertas🤑</b></a>
                         </li>
                         <li>
-                            <a href="#" target="_blank" rel="noopener noreferrer" class="link"><b>Rapi Compra🛵</b></a>
+                            <a href="pag4.html" target="_blank" rel="noopener noreferrer" class="link"><b>Rapi Compra🛵</b></a>
                         </li>
                         <li>
-                            <a href="#" target="_blank" rel="noopener noreferrer" class="link"><b>Nosotros👨‍💼</b></a>
+                            <a href="pag5.html" target="_blank" rel="noopener noreferrer" class="link"><b>Nosotros👨‍💼</b></a>
                         </li>
                         <li>
                             <a href="#" target="_blank" rel="noopener noreferrer" class="link usuario">👩Usuario
@@ -155,7 +155,7 @@
                                     <img src="https://plazavea.vteximg.com.br/arquivos/ids/24844288-184-184/109850.jpg?v=638090213311100000"
                                         alt="Gaseosa Coca Cola Botella 3L" class="imagen-producto">
                                     <br />
-                                    "Gaseosa Inca Cola Botella 3L"
+                                    "Gaseosa Inka Cola Botella 3L"
                                     <p>S/11.40</p>
                                 </div>
                                 <div class="producto">
