--- a/pag3.html
+++ b/pag3.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="imgenes/faviconperalogo.jpg" type="image/x-icon" />
-    <link rel="stylesheet" href="pag2.css">
+    <link rel="shortcut icon" href="imagenes/faviconperalogo.jpg" type="image/x-icon" />
+    <link rel="stylesheet" href="css/pag3.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
     <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet" />
     <title>MiniMarket pear</title>
@@ -21,16 +21,16 @@
                 </a>
                 <ul class="list d-flex g-4xs">
                     <li>
-                        <a href="#1" class="link"><b>Productos🛒</b></a>
+                        <a href="pag2.html" target="_blank" rel="noopener noreferrer" class="link"><b>Productos🛒</b></a>
                     </li>
                     <li>
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="link"><b>Ofertas🤑</b></a>
+                        <a href="pag3.html" target="_blank" rel="noopener noreferrer" class="link"><b>Ofertas🤑</b></a>
                     </li>
                     <li>
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="link"><b>Rapi Compra🛵</b></a>
+                        <a href="pag4.html" target="_blank" rel="noopener noreferrer" class="link"><b>Rapi Compra🛵</b></a>
                     </li>
                     <li>
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="link"><b>Nosotros👨‍💼</b></a>
+                        <a href="pag5.html" target="_blank" rel="noopener noreferrer" class="link"><b>Nosotros👨‍💼</b></a>
                     </li>
                     <li>
                         <a href="#" target="_blank" rel="noopener noreferrer" class="link usuario">👩Usuario
@@ -48,20 +48,6 @@
         <article class="hero d-flex">
             <img src="imagenes/imagefondo3.png" alt="" width="1920" height="1080" class="img img--background" />
             <div class="container g-layout g-layout--center md:g-layout--1fr-1fr">
-                <!-- <div>
-                    <h1>¡Tus productos,a tu alcance! En nuestro minimarket, la calidad se encuentra en cada rincón.</h1>
-                    <h2><b>Compras simples, sonrisas infinitas.👨‍👩‍👧‍👧</b></h2>
-                    <p class="descripcion"><b>
-                            Minimarket Pear es tu destino conveniente y acogedor para todas tus necesidades diarias. Con
-                            una
-                            amplia gama de productos frescos, abarrotes, productos de cuidado personal y más, Minimarket
-                            Pear se enorgullece de ofrecer a sus clientes una experiencia de compra rápida y
-                            amigable.</b>
-                    </p> -->
-                <!-- <div class="d-flex g-4xs">
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="button">Delivery</a>
-                    <a href="#" class="button">Contacto</a>
-                </div> -->
         </article>
         <h3 id="1" class="carrito"><b>Ofertas:🤑</b></h3>
         <div>
@@ -200,7 +186,7 @@
                     <p>S/12.51</p>
                 </div>
             </section>
-            <H3 class="titulo-seccion Bebidas">Jueves en 10% de Bebidas:</H3>
+            <H3 class="titulo-seccion jueves">Jueves en 10% de Bebidas:</H3>
             <section class="seccion-productos">
                 <div class="producto">
                     <img src="https://plazavea.vteximg.com.br/arquivos/ids/24844288-184-184/109850.jpg?v=638090213311100000"
@@ -317,7 +303,7 @@
                     <p>S/11.90</p>
                 </div>
             </section>
-            <h3 class="titulo-seccion frescos">Ofertas 30% comprar con tu tarjeta:</h3>
+            <h3 class="titulo-seccion tarjeta">Ofertas 30% comprar con tu tarjeta:</h3>
             <section class="seccion-productos">
                 <div class="producto">
                     <img src="imagensproductos/lechuga.jpg " alt="Lechuga Americana  x unid" class="imagen-producto">
