--- a/AA2.html
+++ b/AA2.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=ul"/>
     <title>MiniMarket Pear</title>
-    <link rel="shortcut icon" href="imagenes/faviconperalogo.jpg" image/x-icon" />
+    <link rel="shortcut icon" href="" type="image/x-icon" />
     <link rel="stylesheet" href="css/AA2.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+    <script type="module" src="index.js"></script>
 </head>
 
 <body class="body">
@@ -17,28 +18,27 @@
                 <a href="#">
                     <img src="imagenes/Animation.gif" alt="pear" width="300" height="100" class="img" class="logo" />
                 </a>
-                <ul class="list d-flex g-4xs">
-                    <li>
-                        <a href="pag2.html" target="_blank" rel="noopener noreferrer" class="link"><b>Productos🛒</b></a>
+                <ul class="list d-flex g-4xs" id="serviciosLista">
+                    <!-- <li>
+                        <a href="pag2.html"  rel="noopener noreferrer" class="link"><b>Productos🛒</b></a>
                     </li>
                     <li>
-                        <a href="pag3.html" target="_blank" rel="noopener noreferrer" class="link"><b>Ofertas🤑</b></a>
+                        <a href="pag3.html"  rel="noopener noreferrer" class="link"><b>Ofertas🤑</b></a>
                     </li>
                     <li>
-                        <a href="pag4.html" target="_blank" rel="noopener noreferrer" class="link"><b>Rapi Compra🛵</b></a>
+                        <a href="pag4.html"  rel="noopener noreferrer" class="link"><b>Rapi Compra🛵</b></a>
                     </li>
                     <li>
-                        <a href="pag5.html" target="_blank" rel="noopener noreferrer" class="link"><b>Nosotros👨‍💼</b></a>
+                        <a href="pag5.html"  rel="noopener noreferrer" class="link"><b>Nosotros👨‍💼</b></a>
                     </li>
                     <li>
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="link usuario">👩Usuario
-                            Puntos🧑</a>
+                        <a href="#" target="_blank" rel="noopener noreferrer" class="link usuario">👩Usuario Puntos🧑</a>
                     </li>
-                </ul>
+                </ul> -->
                 <ul class="list d-none md:d-block md:d-flex g-4xs">
-                    <li>
+                            <li>
                         <input type=" search" placeholder="buscador"><a href="#" class="button">buscar</a>
-                        </li>
+                            </li>
             </div>
         </nav>
     </header>
@@ -67,203 +67,202 @@
             <h3 class="titulo-seccion top-dia"><b>Tops del día:</b></h3>
         </div>
         <section>
-            <section class="seccion-productos">
-                <div class="producto">
-                    <img src="imagensproductos/papel suave.jpg" alt="Papel Higiénico Suave Cuidado Completo - Pack 2 UN"
-                        class="imagen-producto">
-                    <br />
-                    "Papel Higiénico Suave Cuidado Completo - Pack 2 UN"
-                    <p>S/2.41</p>
-                </div>
-                <div class="producto">
+            <ul class="seccion-productos" id="topsdeldia">
+            <!-- <li class="producto">
+                        <img src="imagensproductos/papel suave.jpg" alt="Papel Higiénico Suave Cuidado Completo - Pack 2 UN"
+                        class="imagen-producto" >
+                        <br />
+                        "Papel Higiénico Suave Cuidado Completo - Pack 2 UN"
+                        <p>S/2.41</p>
+                </li>
+                    <li class="producto">
                     <img src="imagensproductos/pan bimbo .jpe" alt="Pan de Molde BIMBO Integral Bolsa 750g" class="imagen-producto">
                     <br />
                     "Pan de Molde BIMBO Integral Bolsa 750g"
                     <p>S/10.50</p>
-                </div>
-                <div class="producto">
+                </li>
+                <li class="producto">
                     <img src="imagensproductos/leche.jpg" alt="Leche Reconstituida Gloria Lata 395g" class="imagen-producto"> <br />
                     "Leche Reconstituida Gloria Lata 395g"
                     <p>S/4.20</p>
-                </div>
-                <div class="producto">
+                </li>
+                <li class="producto">
                     <img src="imagensproductos/sopaajinomen.jpe" alt="Sopa Instantánea Ajinomen Sabor Carne 80g"
                         class="imagen-producto"> <br />
                     "Sopa Instantánea Ajinomen Sabor Carne 80g"
                     <p>S/1.60</p>
-                </div>
-            </section>
+                </li> -->
+            </ul>
             <H3 class="titulo-seccion abarrotes"><b>Abarrotes:</b></H3>
-            <section class="seccion-productos">
-                <div class="producto">
+            <ul class="seccion-productos" id="abarrotes">
+                <!-- <li class="producto">
                     <img src="imagensproductos/arroz.jpg" alt="Arroz Extra Costeño 5kg" class="imagen-producto"> <br>
                     "Arroz Extra Costeño 5kg"
                     <p>S/23.99</p>
-                </div>
-                <div class="producto">
+                </li>
+                <li class="producto">
                     <img src="imagensproductos/aceite.jpg" alt="Aceite Vegetal Primor Premium 900ml" class="imagen-producto"> <br />
                     "Aceite Vegetal Primor Premium 900ml"
                     <p>S/11.50</p>
-                    </div>
-                    <div class="producto">
+                    </li>
+                <li class="producto">
                     <img src="imagensproductos/fideos.jpe" alt="Fideo Fettuccini Don Vittorio 950g" class="imagen-producto"> <br />
                     "Fideo Fettuccini Don Vittorio 950g"
                     <p>S/5.80</p>
-                    </div>
-                    <div class="producto">
+                </li>
+                <li class="producto">
                     <img src="https://wongfood.vteximg.com.br/arquivos/ids/472931-1000-1000/frontal-833.jpg?v=637677675083400000"
                         alt="Azúcar Rubia Paramonga 1kg" class="imagen-producto">
                     <br />
                     Azúcar Rubia Paramonga 1kg"
                     <p>S/5.10</p>
-                </div>
-                </section>
+                </li> -->
+            </ul>
                 <H3 class="titulo-seccion Bebidas">Bebidas:</H3>
-                <section class="seccion-productos">
-                    <div class="producto">
+        <ul class="seccion-productos" id="bebidas">
+            <!-- <li class="producto">
                     <img src="imagensproductos/cocacola.jpe" alt="Gaseosa Coca Cola Botella 3L" class="imagen-producto">
                     <br />
                     "Gaseosa Coca Cola Botella 3L"
                     <p>S/11.40</p>
-                </div>
-                <div class="producto">
+            </li>
+            <li class="producto">
                     <img src="imagensproductos/agua san mateo.jpe" alt="Agua Sin Gas Mineral San Mateo Botella 2.5 L"
                         class="imagen-producto">
                     <br />
                     "Agua Sin Gas Mineral San Mateo Botella 2.5 L"
                     <p>S/3.00</p>
-                </div>
-                <div class="producto">
+            </li>
+            <li class="producto">
                     <img src="imagensproductos/soprade.jpe" alt="Bebida Rehidratante Sporade Blueberry Botella 500 ml"
                         class="imagen-producto">
                     <br />
                     "Bebida Rehidratante Sporade Blueberry Botella 500 ml"
                     <p>S/2.40</p>
-                </div>
-                <div class="producto">
+            </li>
+            <li class="producto">
                     <img src="imagensproductos/frugo.jpg" alt="Bebida de Durazno Frugos del Valle Botella 1L" class="imagen-producto">
                     <br />
                     Bebida de Durazno Frugos del Valle Botella 1L"
                     <p>S/4.50</p>
-                    </div>
-                    </section>
-                    <H3 class="titulo-seccion cuidado-personal">Cuidado personal y limpieza:</H3>
-                    <section class="seccion-productos">
-                        <div class="producto">
-                            <img src="imagensproductos/javondove.jpe" alt="jabón dove 1u" class="imagen-producto">
+            </li> -->
+        </ul>
+            <H3 class="titulo-seccion cuidado-personal">Cuidado personal y limpieza:</H3>
+        <ul class="seccion-productos" id="cuidado">
+            <!-- <li class="producto">
+                    <img src="imagensproductos/javondove.jpe" alt="jabón dove 1u" class="imagen-producto">
                             <br />
                             "jabón dove 1u"
                             <p>S/2.90</p>
-                        </div>
-                        <div class="producto">
+            </li>
+            <li class="producto">
                     <img src="imagensproductos/shapusavital.png" alt="Shampoo Reparación Perfecta Savital 530 ml" class="imagen-producto">
                     <br />
                     "Shampoo Reparación Perfecta Savital 530 ml"
                     <p>S/12.90</p>
-                    </div>
-                    <div class="producto">
+            </li>
+            <li class="producto">
                         <img src="imagensproductos/pastadental.jpe" alt="Pasta Dental COLGATE Triple Acción Tubo 150ml "
                             class="imagen-producto">
                         <br />
                         "Pasta Dental COLGATE Triple Acción Tubo 150ml "
                         <p>S/5.00</p>
-                    </div>
-                    <div class="producto">
+            </li>
+            <li class="producto">
                         <img src="imagensproductos/Bioré Bandas.png" alt="Bioré Bandas Nasales Limpieza Profunda 8 und"
                             class="imagen-producto">
                         <br />
                         "Bioré Bandas Nasales Limpieza Profunda 8 und"
                         <p>S/31.90</p>
-                    </div>
-                    </section>
-                    <h3 class="titulo-seccion frescos">frescos:</h3>
-                    <section class="seccion-productos">
-                        <div class="producto">
-                            <img src="imagensproductos/lechuga.jpg " alt="Lechuga Americana  x unid" class="imagen-producto">
-                            <br />
-                            "Lechuga Americana x unid
-                            <p>S/1.90</p>
-                        </div>
-                        <div class="producto">
+            </li> -->
+        </ul>
+        <h3 class="titulo-seccion frescos">Frescos:</h3>
+        <ul class="seccion-productos" id="frescos">
+            <!-- <li class="producto">
+                    <img src="imagensproductos/lechuga.jpg " alt="Lechuga Americana  x unid" class="imagen-producto">
+                    <br />
+                    "Lechuga Americana x unid
+                    <p>S/1.90</p>
+            </li>
+            <li class="producto">
                     <img src="imagensproductos/queso.jpg" alt="Queso Preparado Cheddar Laive 8 tajadas" class="imagen-producto">
                     <br />
-                    "Queso Preparado Cheddar Laive 8 tajadas"
+                "Queso Preparado Cheddar Laive 8 tajadas"
                     <p>S/8.90</p>
-                    </div>
-                    <div class="producto">
-                        <img src="imagensproductos/galletas.jpe" alt="Galletas Morochas Fiesta 224g" class="imagen-producto">
-                        <br />
-                        "Galletas Morochas Fiesta 224g"
-                        <p>S/10.00</p>
-                    </div>
-                    <div class="producto">
-                        <img src="imagensproductos/helado.jpe" alt="HELADO PEZIDURI CHOCOCHIPS 2.2L" class="imagen-producto">
-                        <br />
-                        HELADO PEZIDURI CHOCOCHIPS 2.2
-                        <p>S/20.90</p>
-                    </div>
-                    </section>
+            </li>
+            <li class="producto">
+                    <img src="imagensproductos/galletas.jpe" alt="Galletas Morochas Fiesta 224g" class="imagen-producto">
+                    <br />
+                    "Galletas Morochas Fiesta 224g"
+                    <p>S/10.00</p>
+            </li>
+            <li class="producto">
+                    <img src="imagensproductos/helado.jpe" alt="HELADO PEZIDURI CHOCOCHIPS 2.2L" class="imagen-producto">
+                    <br />
+                    HELADO PEZIDURI CHOCOCHIPS 2.2
+                    <p>S/20.90</p>
+            </li> -->
+        </ul>
     </main>
     <footer>
         <nav>
             <div>
                 <h4>Redes sociales:</h4>
-                <ul class="Redes sociales">
-                    <li>
+                <ul class="Redes sociales" id="redes">
+                    <!-- <li>
                         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer" class="link">
                             youtube<i class="bi bi-youtube"></i></a>
                             </li>
-                            <li>
+                    <li>
                                 <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer" class="link">
                             tik tok <i class="bi bi-tiktok"></i></a>
-                            </li>
-                            <li>
+                    </li>
+                    <li>
                         <a href="https://www.facebook.com/?locale=es_LA" target="_blank" rel="noopener noreferrer" class="link">
                             facebook <i class="bi bi-facebook"></i></a>
-                            </li>
-                            <li>
+                    </li>
+                    <li>
                         <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="link" />
                         instagram <i class="bi bi-instagram"></i></a>
-                        </li>
-                        </ul>
-                        </div>
-                        </nav>
-                        <nav>
-                            <div>
-                                <h4>contactarnos:📱</h4>
-                                <ul>
-                                    <li>
-                                        <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank" rel="noopener noreferrer" class="link">
+                    </li> -->
+                </ul>
+            </div>
+        </nav>
+        <nav>
+            <div>
+                <h4>contactarnos:📱</h4>
+                <ul id="contact">
+                    <!-- <li>
+                        <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank" rel="noopener noreferrer" class="link">
                             whatsapp<i class="bi bi-whatsapp"></i></i></a>
-                            </li>
-                            <li>
-                                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer" class="link">
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer" class="link">
                             minimarketpear<i class="bi bi-at"></i>hotmail.com</a>
-                            </li>
-                            <li>
-                                <a href="https://www.messenger.com/?locale=es_ES" target="_blank" rel="noopener noreferrer" class="link">
+                    </li>
+                    <li>
+                        <a href="https://www.messenger.com/?locale=es_ES" target="_blank" rel="noopener noreferrer" class="link">
                             Messenger<i class="bi bi-messenger"></i></a>
-                            </li>
-                            </ul>
-                            </div>
-                            </nav>
-                            <nav>
-                                <div>
+                    </li> -->
+                </ul>
+            </div>
+        </nav>
+        <nav>
+            <div>
                 <h4>Reclamos:</h4>
-                <ul>
-                    <li class="reclamaciones">
+                <ul id="reclamo">
+                    <!-- <li class="reclamaciones">
                         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer" class="link">
                             libro de reclamaciones<i class="bi bi-book-half"></i></a>
-                            </li>
-                            <li class="reclamaciones">
-                                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer" class="link">
-                            política de ciberseguridd<i class="bi bi-shield-lock"></i></a>
-                            </li>
-                            </ul>
-                            </div>
-                            </nav>
-                            </footer>
-
+                    </li>
+                    <li class="reclamaciones">
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer" class="link">
+                            política de ciberseguridad<i class="bi bi-shield-lock"></i></a>
+                    </li> -->
+                </ul>
+            </div>
+        </nav>
+    </footer>
 </body>
 
 </html>
