se termino el lisatdos de la pag2,3,4 a js y se agrego 2 paginas nuevas de login e usuario con su respecivos archivos, per aun falta retocar

--- a/pag4.html
+++ b/pag4.html
@@ -19,31 +19,13 @@
                 <a href="AA2.html">
                     <img src="imagenes/Animation.gif" alt="pear" width="300" height="100" class="img" class="logo" />
                 </a>
-                <ul class="list d-flex g-4xs">
-                    <li>
-                        <a href="pag2.html" target="_blank" rel="noopener noreferrer"
-                            class="link"><b>Productos🛒</b></a>
-                    </li>
-                    <li>
-                        <a href="pag3.html" target="_blank" rel="noopener noreferrer" class="link"><b>Ofertas🤑</b></a>
-                    </li>
-                    <li>
-                        <a href="pag4.html" target="_blank" rel="noopener noreferrer" class="link"><b>Rapi
-                                Compra🛵</b></a>
-                    </li>
-                    <li>
-                        <a href="pag5.html" target="_blank" rel="noopener noreferrer"
-                            class="link"><b>Nosotros👨‍💼</b></a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="link usuario">👩Usuario
-                            Puntos🧑</a>
-                    </li>
-                </ul>
                 <ul class="list d-none md:d-block md:d-flex g-4xs">
                     <li>
                         <input type=" search" placeholder="buscador"><a href="#" class="button">buscar</a>
                     </li>
+                </ul>
+                <ul class="list d-flex g-4xs" id="serviciosLista">
+                </ul>
             </div>
         </nav>
     </header>
@@ -60,293 +42,47 @@
                         <a href="#" class="button">Contacto</a>
                     </div>
                 </div>
-                <img src="imagenes/rapicompra.gif" width="514" height="538" class="img2">
+                <img src="imagenes/rapicompra.gif" width="514" height="450" class="img2">
             </div>
             </div>
         </article>
-        <h3 id="1" class="carrito"><b>Productos de compra rápida :🥙🍗</b></h3>
+        <h3 id="1" class="carrito"><b>Productos de Rapi Compra :🥙🍗</b></h3>
         <div>
             <h3 class="titulo-seccion top-dia"><b>🍔🍾 productos destacados:🌮🍜</b></h3>
         </div>
         <section>
-            <section class="seccion-productos">
-                <div class="producto">
-                    <img src="https://s7d2.scene7.com/is/image/TottusPE/10174358_1?wid=240&hei=240&qlt=70"
-                        alt="Gaseosa Inka Kola 500 mL" class="imagen-producto">
-                    <br />
-                    "Gaseosa Inka Kola 500 mL"
-                    <p>S/2.90</p>
-                </div>
-                <div class="producto">
-                    <img src="https://s7d2.scene7.com/is/image/TottusPE/41773751_1?wid=240&hei=240&qlt=70"
-                        alt="Bebida rehidratante Powerade Multifutas 1L" class="imagen-producto">
-                    <br />
-                    "Bebida rehidratante Powerade Multifutas 1L"
-                    <p>S/4.40</p>
-                </div>
-                <div class="producto">
-                    <img src="https://s7d2.scene7.com/is/image/TottusPE/43157911_1?wid=800&hei=800&qlt=70"
-                        alt="BEBIDA GASEOSA FANTA MISTERIO FRUTAL BOT " class="imagen-producto">
-                    <br />
-                    "BEBIDA GASEOSA FANTA MISTERIO FRUTAL BOT "
-                    <p>S/1.90</p>
-                </div>
-                <div class="producto">
-                    <img src="https://s7d2.scene7.com/is/image/TottusPE/40707464_1?wid=800&hei=800&qlt=70"
-                        alt="Gaseosa Coca Cola Sabor Original 355 mL." class="imagen-producto">
-                    <br />
-                    "Gaseosa Coca Cola Sabor Original 355 mL"
-                    <p>S/6.90</p>
-                </div>
-            </section>
-            <section class="seccion-productos">
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/18055903-184-184/20253395.jpg?v=637991977424370000"
-                        alt="Croissant Mixto" class="imagen-producto">
-                    <br>
-                    "Croissant Mixto"
-                    <p>S/6.50</p>
-                </div>
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/18055856-184-184/20253393.jpg?v=637991977362300000"
-                        alt="Triple de Pollo con Jamón y Queso" class="imagen-producto">
-                    <br />
-                    "Triple de Pollo con Jamón y Queso"
-                    <p>S/6.50 </p>
-                </div>
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/27331135-184-184/935332.jpg?v=638273376947070000"
-                        alt="Triple de Queso con Huevo y Jamón EL CEDRO Ban." class="imagen-producto">
-                    <br />
-                    "Triple de Queso con Huevo y Jamón EL CEDRO Ban"
-                    <p>S/6.50</p>
-                </div>
-                </div>
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/18055848-184-184/20253403.jpg?v=637991977221800000"
-                        alt="Triple Pollo en Pan Integral" class="imagen-producto">
-                    <br />
-                    Triple Pollo en Pan Integral"
-                    <p>S/6.50</p>
-                </div>
-            </section>
-            <section class="seccion-productos">
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/1233388-184-184/20121093.jpg?v=637515089251200000"
-                        alt="Tequeños TEQUEMANIA con Queso Caja 12un" class="imagen-producto">
-                    <br />
-                    "Tequeños TEQUEMANIA con Queso Caja 12un"
-                    <p>S/18.90</p>
-                </div>
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/561255-450-450/20139106.jpg"
-                        alt="Lasagna de Carne EMILIANA Bandeja 500g" class="imagen-producto">
-                    <br />
-                    "Lasagna de Carne EMILIANA Bandeja 500g"
-                    <p>30.60</p>
-                </div>
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/27427641-184-184/20329684.jpg?v=638282895774200000"
-                        alt="Papas INKA CHIPS BBQ & Cebolla Bolsa 135g" class="imagen-producto">
-                    <br />
-                    "Papas INKA CHIPS BBQ & Cebolla Bolsa 135g"
-                    <p>8.50</p>
-                </div>
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/27427640-184-184/20329670.jpg?v=638282895727430000"
-                        alt="Crema de Ají Tari Alacena 400 g" class="imagen-producto">
-                    <br />
-                    "Crema de Ají Tari Alacena 400 g"
-                    <p>S/8.00</p>
-                </div>
-            </section>
-            <section class="seccion-productos">
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/27427642-184-184/20329663.jpg?v=638282895816630000"
-                        alt=Papas INKA CHIPS con Sal de Mar Bolsa 135g" class="imagen-producto">
-                    <br />
-                    "Papas INKA CHIPS con Sal de Mar Bolsa 135g"
-                    <p>S/8.00</p>
-                </div>
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/26507623-184-184/20354532.jpg?v=638212901044470000"
-                        alt="Papas INKA CHIPS con Sal de Mar Bolsa 135g" class="imagen-producto">
-                    <br />
-                    "Papas INKA CHIPS con Sal de Mar Bolsa 135g"
-                    <p>S/1.40</p>
-                </div>
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/561095-184-184/20103872.jpg?v=637427419983100000"
-                        alt="Comidas Instantánea KRAFT Macaroni & Cheese or..." class="imagen-producto">
-                    <br />
-                    "Comidas Instantánea KRAFT Macaroni & Cheese "
-                    <p>6.40</p>
-                </div>
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/1508913-184-184/20103176.jpg?v=637547847166230000"
-                        alt="Sopa Instantánea AJINOMEN Sabor oriental Bolsa" class="imagen-producto">
-                    <br />
-                    "Sopa Instantánea AJINOMEN Sabor oriental Bolsa"
-                    <p>S/1.40</p>
-                </div>
-            </section>
-            <section class="seccion-productos">
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/27205685-184-184/20020751.jpg?v=638271648628570000"
-                        alt="Bebida Instantánea en Polvo ZUKO Sabores de mi..." class="imagen-producto">
-                    <br />
-                    "Bebida Instantánea en Polvo ZUKO Sabores de mi..."
-                    <p>S/1.20</p>
-                </div>
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/561851-184-184/20196975.jpg?v=637427446228170000"
-                        alt="Sopa instantánea AJINOMEN Gallina Picante Vaso" class="imagen-producto">
-                    <br />
-                    "Sopa instantánea AJINOMEN Gallina Picante Vaso"
-                    <p>S/2.90</p>
-                </div>
-                <div class="producto">
-                    <img src="https://s7d2.scene7.com/is/image/TottusPE/42020689_1?wid=240&hei=240&qlt=70"
-                        alt="HAMBURGUESA DE FINAS HIERBAS REDONDOS" class="imagen-producto">
-                    <br />
-                    "HAMBURGUESA DE FINAS HIERBAS REDONDOS "
-                    <p>S/24.60</p>
-                </div>
-                <div class="producto">
-                    <img src="https://s7d2.scene7.com/is/image/TottusPE/41663488_1?wid=240&hei=240&qlt=70"
-                        alt="Chorizo finas hierbas picante" class="imagen-producto">
-                    <br />
-                    "Chorizo finas hierbas picante"
-                    <p>S/25.50</p>
-                </div>
-            </section>
-            <section class="seccion-productos">
-                <div class="producto">
-                    <img src="https://s7d2.scene7.com/is/image/TottusPE/41609752_1?wid=240&hei=240&qlt=70"
-                        alt="Doritos Queso Atrevido 210g" class="imagen-producto">
-                    <br />
-                    "Doritos Queso Atrevido 210g"
-                    <p>S/10.90</p>
-                </div>
-                <div class="producto">
-                    <img src="https://s7d2.scene7.com/is/image/TottusPE/42494462_1?wid=240&hei=240&qlt=70"
-                        alt="Dos paquetes de gaseosas Pepsi Cola y 7 Up 3 L class=" imagen-producto">
-                    <br />
-                    "Dos paquetes de gaseosas Pepsi Cola y 7 Up 3 L"
-                    <p>S/7.20</p>
-                </div>
-                <div class="producto">
-                    <img src="https://s7d2.scene7.com/is/image/TottusPE/43061200_1?wid=240&hei=240&qlt=70"
-                        alt="Papas Lay's Ondas Picante 140g" class="imagen-producto">
-                    <br />
-                    "Papas Lay's Ondas Picante 140g"
-                    <p>S/6.90</p>
-                </div>
-                <div class="producto">
-                    <img src="https://s7d2.scene7.com/is/image/TottusPE/42730078_1?wid=240&hei=240&qlt=70"
-                        alt="Cheese Tris Queso 140g " class="imagen-producto">
-                    <br />
-                    "Cheese Tris Queso 140g "
-                    <p>S/5.00</p>
-                </div>
-            </section>
-            <section class="seccion-productos">
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/27431515-184-184/20062763.jpg?v=638288929810070000"
-                        alt="Hamburguesa OREGON FOODS Parrillera 100% Carne" class="imagen-producto">
-                    <br />
-                    "Hamburguesa OREGON FOODS Parrillera 100% Carne Caja 4un"
-                    <p>S/18.90</p>
-                </div>
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/5107570-184-184/20238220.jpg?v=637770568681100000"
-                        alt="Nuggets de Pollo Vegetariano GARDEIN Bolsa" class="imagen-producto">
-                    <br />
-                    "Nuggets de Pollo Vegetariano GARDEIN Bolsa 225g"
-                    <p>S/30.90</p>
-                </div>
-                <div class="producto">
-                    <img src="https://plazavea.vteximg.com.br/arquivos/ids/23048226-184-184/20326281.jpg?v=638060629775700000"
-                        alt="Pizza Pepperoni DON ITALO 420g Bolsa 1un"" class=" imagen-producto">
-                    <br />
-                    "Pizza Pepperoni DON ITALO 420g Bolsa 1un"
-                    <p>S/33.40</p>
-                </div>
-                <div class="producto">
-                    <img src="https://s7d2.scene7.com/is/image/TottusPE/10225435_1?wid=240&hei=240&qlt=70"
-                        alt="NUGGET DE POLLO S.FNDO BOLSA x  10 UN" class="imagen-producto">
-                    <br />
-                    "NUGGET DE POLLO S.FNDO BOLSA x 10 UN"
-                    <p>S/4.90</p>
-                </div>
+            <ul class="seccion-productos" id="RAPICOMPRA">
+            </ul>
+        </section>
+        
+                
     </main>
     <footer>
         <nav>
             <div>
                 <h4>Redes sociales:</h4>
-                <ul class="Redes sociales">
-                    <li>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer"
-                            class="link">
-                            youtube<i class="bi bi-youtube"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer" class="link">
-                            tik tok <i class="bi bi-tiktok"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/?locale=es_LA" target="_blank" rel="noopener noreferrer"
-                            class="link">
-                            facebook <i class="bi bi-facebook"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="link" />
-                        instagram <i class="bi bi-instagram"></i></a>
-                    </li>
+                <ul class="Redes sociales" id="redes">
                 </ul>
             </div>
         </nav>
         <nav>
             <div>
                 <h4>contactarnos:📱</h4>
-                <ul>
-                    <li>
-                        <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank" rel="noopener noreferrer"
-                            class="link">
-                            whatsapp<i class="bi bi-whatsapp"></i></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer"
-                            class="link">
-                            minimarketpear<i class="bi bi-at"></i>hotmail.com</a>
-                    </li>
-                    <li>
-                        <a href="https://www.messenger.com/?locale=es_ES" target="_blank" rel="noopener noreferrer"
-                            class="link">
-                            Messenger<i class="bi bi-messenger"></i></a>
-                    </li>
+                <ul id="contact">
                 </ul>
             </div>
         </nav>
         <nav>
             <div>
                 <h4>Reclamos:</h4>
-                <ul>
-                    <li class="reclamaciones">
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer"
-                            class="link">
-                            libro de reclamaciones<i class="bi bi-book-half"></i></a>
-                    </li>
-                    <li class="reclamaciones">
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer"
-                            class="link">
-                            política de ciberseguridd<i class="bi bi-shield-lock"></i></a>
-                    </li>
+                <ul id="reclamo">
                 </ul>
             </div>
         </nav>
     </footer>
 
+
+    <script type="module" src="js/util/index4.js"></script>
 </body>
 
 </html>
