--- a/usuario/usuario.html
+++ b/usuario/usuario.html
@@ -9,7 +9,7 @@
 <body>
     <section class="centrado">
         <div class="perfil">
-            <img src="https://img.freepik.com/vector-premium/icono-perfil-avatar_188544-4755.jpg" alt="Foto de perfil" width="50px" height="70px">
+            <img src="/imagenes/UsuarioPerfil.jpg" alt="Foto de perfil" width="400px" height="400px" >
             <h2>Nombre del Usuario</h2>
             <p>Puntos: <span class="puntos">100</span></p>
             <div class="saldo">
@@ -50,5 +50,7 @@
             </ul>
         </div>
     </section>
+
+    <script src="usuario.js"></script>
 </body>
 </html>
