--- a/Pages/pag5.html
+++ b/Pages/pag5.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="imgenes/faviconperalogo.jpg" type="image/x-icon" />
-    <link rel="stylesheet" href="css/pag5.css">
+    <link rel="shortcut icon" href="/imagenes/faviconperalogo.jpg"" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/pag5.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
     <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet" />
     <title>MiniMarket pear</title>
@@ -16,26 +16,26 @@
     <header class="header">
         <nav class="nav">
             <div class="container flexbox flexbox--centered-sides">
-                <a href="AA2.html">
-                    <img src="imagenes/Animation.gif" alt="pear" width="300" height="100" class="img" class="logo" />
+                <a href="../index.html">
+                    <img src="/imagenes/Animation.gif" alt="pear" width="300" height="100" class="img" class="logo" />
                 </a>
                 <ul class="list d-flex g-4xs">
                     <li>
-                        <a href="pag2.html" _blank" rel="noopener noreferrer" class="link"><b>Productos🛒</b></a>
+                        <a href="/Pages/pag2.html" _blank" rel="noopener noreferrer" class="link"><b>Productos🛒</b></a>
                     </li>
                     <li>
-                        <a href="pag3.html" target="_blank" rel="noopener noreferrer" class="link"><b>Ofertas🤑</b></a>
+                        <a href="/Pages/pag3.html" target="_blank" rel="noopener noreferrer" class="link"><b>Ofertas🤑</b></a>
                     </li>
                     <li>
-                        <a href="pag4.html" target="_blank" rel="noopener noreferrer" class="link"><b>Rapi
+                        <a href="/Pages/pag4.html" target="_blank" rel="noopener noreferrer" class="link"><b>Rapi
                                 Compra🛵</b></a>
                     </li>
                     <li>
-                        <a href="pag5.html" target="_blank" rel="noopener noreferrer"
+                        <a href="/Pages/pag5.html" target="_blank" rel="noopener noreferrer"
                             class="link"><b>Nosotros👨‍💼</b></a>
                     </li>
                     <li>
-                        <a href="login/index.html" target="_blank" rel="noopener noreferrer" class="link usuario">👩Usuario
+                        <a href="/login/index.html" target="_blank" rel="noopener noreferrer" class="link usuario">👩Usuario
                             Puntos🧑</a>
                     </li>
                 </ul>
@@ -71,11 +71,11 @@
                         diferencia."
                     </p>
                     <div class="d-flex g-4xs">
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="button">Delivery</a>
+                        <!-- <a href="#" target="_blank" rel="noopener noreferrer" class="button">Delivery</a> -->
                         <a href="#" class="button">Contacto</a>
                     </div>
                 </div>
-                <img src="imagenes/nosotros gif.gif" width="514" height="538" class="img2">
+                <img src="/imagenes/nosotros gif.gif" width="450" height="450" class="img2">
             </div>
             </div>
         </article>
@@ -100,7 +100,7 @@
                         </li>
                         <li>
                             <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"
-                                class="link" />
+                                class="link">
                             instagram <i class="bi bi-instagram"></i></a>
                         </li>
                     </ul>
