--- a/Pages/pag2.html
+++ b/Pages/pag2.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="imagenes/faviconperalogo.jpg" type="image/x-icon" />
-    <link rel="stylesheet" href="css/pag2.css">
+    <link rel="shortcut icon" href="/imagenes/faviconperalogo.jpg" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/pag2.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
     <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet" />
     <title>MiniMarket pear</title>
@@ -14,8 +14,8 @@
         <header class="header">
             <nav class="nav">
                 <div class="container flexbox flexbox--centered-sides">
-                    <a href="AA2.html">
-                        <img src="imagenes/Animation.gif" alt="pear" width="300" height="100" class="img" class="logo" />
+                    <a href="../index.html">
+                        <img src="/imagenes/Animation.gif" alt="pear" width="300" height="100" class="img" class="logo" />
                     </a>
                     <ul class="list d-none md:d-block md:d-flex g-4xs">
                         <li>
@@ -29,7 +29,7 @@
         </header>
         <main>
             <article class="hero d-flex">
-                <img src="imagenes/fondoprincipal.png" alt="" width="1920" height="1080" class="img img--background" />
+                <img src="/imagenes/fondoprincipal.png" alt="" width="1920" height="1080" class="img img--background" />
                 <div class="container g-layout g-layout--center md:g-layout--1fr-1fr">
                     <div>
                         <h1>¡Tus productos,a tu alcance! En nuestro minimarket, la calidad se encuentra en cada rincón.</h1>
@@ -89,6 +89,6 @@
             </nav>
         </footer>
     
-                                <script type="module" src="js/util/index2.js"></script>
+                                <script type="module" src="/js/util/index2.js"></script>
     </body>
 </html>
