--- a/Pages/pag4.html
+++ b/Pages/pag4.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="imagenes/faviconperalogo.jpg" type="image/x-icon" />
-    <link rel="stylesheet" href="css/pag4.css">
+    <link rel="shortcut icon" href="/imagenes/faviconperalogo.jpg" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/pag4.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
     <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet" />
     <title>MiniMarket pear</title>
@@ -16,8 +16,8 @@
     <header class="header">
         <nav class="nav">
             <div class="container flexbox flexbox--centered-sides">
-                <a href="AA2.html">
-                    <img src="imagenes/Animation.gif" alt="pear" width="300" height="100" class="img" class="logo" />
+                <a href="../index.html">
+                    <img src="/imagenes/Animation.gif" alt="pear" width="300" height="100" class="img" class="logo" />
                 </a>
                 <ul class="list d-none md:d-block md:d-flex g-4xs">
                     <li>
@@ -42,7 +42,7 @@
                         <a href="#" class="button">Contacto</a>
                     </div>
                 </div>
-                <img src="imagenes/rapicompra.gif" width="514" height="450" class="img2">
+                <img src="/imagenes/rapicompra.gif" width="514" height="450" class="img2">
             </div>
             </div>
         </article>
@@ -82,7 +82,7 @@
     </footer>
 
 
-    <script type="module" src="js/util/index4.js"></script>
+    <script type="module" src="/js/util/index4.js"></script>
 </body>
 
 </html>
