--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=ul"/>
     <title>MiniMarket Pear</title>
-    <link rel="shortcut icon" href="" type="image/x-icon" />
-    <link rel="stylesheet" href="css/AA2.css" />
+    <link rel="shortcut icon" href="imagenes/faviconperalogo.jpg" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/index.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
     
 </head>
