arregaldo de enrutamiento

--- a/Pages/pag2.html
+++ b/Pages/pag2.html
@@ -29,7 +29,7 @@
         </header>
         <main>
             <article class="hero d-flex">
-                <img src="/imagenes/fondoprincipal.png" alt="" width="1920" height="1080" class="img img--background" />
+                <img src="../imagenes/fondoprincipal.png" alt="" width="1920" height="1080" class="img img--background" />
                 <div class="container g-layout g-layout--center md:g-layout--1fr-1fr">
                     <div>
                         <h1>¡Tus productos,a tu alcance! En nuestro minimarket, la calidad se encuentra en cada rincón.</h1>
