--- a/Pages/pag3.html
+++ b/Pages/pag3.html
@@ -17,7 +17,7 @@
             <nav class="nav">
                 <div class="container flexbox flexbox--centered-sides">
                     <a href="../index.html">
-                        <img src="/imagenes/Animation.gif" alt="pear" width="300" height="100" class="img" class="logo" />
+                        <img src="../imagenes/Animation.gif" alt="pear" width="300" height="100" class="img" class="logo" />
                     </a>
                     <ul class="list d-none md:d-block md:d-flex g-4xs">
                         <li>
@@ -32,7 +32,7 @@
     </header>
     <main>
         <article class="hero d-flex">
-            <img src="/imagenes/imagefondo3.png" alt="" width="1920" height="1080" class="img img--background" />
+            <img src="../imagenes/imagefondo3.png" alt="" width="1920" height="1080" class="img img--background" />
             <div class="container g-layout g-layout--center md:g-layout--1fr-1fr">
         </article>
         <h3 id="1" class="carrito"><b>Ofertas:🤑</b></h3>
