--- a/Pages/pag4.html
+++ b/Pages/pag4.html
@@ -17,7 +17,7 @@
         <nav class="nav">
             <div class="container flexbox flexbox--centered-sides">
                 <a href="../index.html">
-                    <img src="/imagenes/Animation.gif" alt="pear" width="300" height="100" class="img" class="logo" />
+                    <img src="../imagenes/Animation.gif" alt="pear" width="300" height="100" class="img" class="logo" />
                 </a>
                 <ul class="list d-none md:d-block md:d-flex g-4xs">
                     <li>
@@ -42,7 +42,7 @@
                         <a href="#" class="button">Contacto</a>
                     </div>
                 </div>
-                <img src="/imagenes/rapicompra.gif" width="514" height="450" class="img2">
+                <img src="../imagenes/rapicompra.gif" width="514" height="450" class="img2">
             </div>
             </div>
         </article>
