arregaldo de enrutamiento

--- a/Pages/pag2.html
+++ b/Pages/pag2.html
@@ -89,6 +89,6 @@
             </nav>
         </footer>
     
-                                <script type="module" src="../js/util/index2.js"></script>
+                                <script type="module" src="/js/util/index2.js"></script>
     </body>
 </html>
