Se a agragdo banner encima del footer sobre Metdod de pago con yape

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
         <h3 class="titulo-seccion frescos">Frescos:</h3>
         <ul class="seccion-productos" id="frescos">
         </ul>
+        <section>
+            <img src="imagenes/yape baneer.png" alt="" class="banner" >
+        </section>
     </main>
     <footer>
         <nav>
@@ -86,14 +89,6 @@
             <div>
                 <h4>Reclamos:</h4>
                 <ul id="reclamo">
-                    <!-- <li class="reclamaciones">
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer" class="link">
-                            libro de reclamaciones<i class="bi bi-book-half"></i></a>
-                    </li>
-                    <li class="reclamaciones">
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer" class="link">
-                            política de ciberseguridad<i class="bi bi-shield-lock"></i></a>
-                    </li> -->
                 </ul>
             </div>
         </nav>
