--- a/login/index.html
+++ b/login/index.html
@@ -19,6 +19,7 @@
             <i class="fa-solid fa-lock"></i>
             <input placeholder="password" type="password" id="password">
         </label>
+        <a href="#" class="link">Register</a>
         <a href="#" class="link">Forgot your password?</a>
 
         <button id="button">Login</button>
